--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}external/js/jwplayer/jwplayer.js"></script>
     <script type="text/javascript">
         jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";
-        var STATIC_URL='{{ STATIC_URL }}';
+        STATIC_URL='{{ STATIC_URL }}';
         var submitNoteUrl = '{% url record_simple %}';
         var isLive = false;
     </script>
