cleanup js imports

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block headExtras %}
 {{block.super}}
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" ></script>
     <script type="text/javascript" src="{{ STATIC_URL }}external/js/jwplayer/jwplayer.js"></script>
     <script type="text/javascript">
