--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -13,8 +13,8 @@
 
 {% block scripts %}
 {{block.super}}
-<script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}external/js/underscore-min.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}external/js/underscore-min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" ></script>
    <!--
     <script type="text/javascript" src="{{ STATIC_URL }}external/js/jwplayer/jwplayer.js"></script>
@@ -25,7 +25,7 @@
     <script type="text/javascript">
         jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";
         STATIC_URL='{{ STATIC_URL }}';
-        var submitNoteUrl = '{% url record_simple %}';
+        var submitNoteUrl = "{% url 'record_simple' %}";
         var isLive = false;
     </script>
     <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
