--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -73,7 +73,7 @@
 	   			{% endif %}
 	   			<tr>
 	   				<td>Current Time: </td>
-	   				<td> <label id="sliderTimeLabel"></label></td>
+	   				<td> <span id="sliderTimeLabel"></span></td>
 	   			</tr>
 	   		</table>
 	   		</div>
