--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -7,11 +7,11 @@
        	<input type="hidden" id="source" value="{{ source }}" >
 		<div id="error_div{{ form.index }}" style="float:left; height:15px;padding-bottom:2px;">
 			<img src="{{STATIC_URL}}xgds_video/images/ipx.gif" id="error_image{{ form.index }}" width="12" alt="error image {{form.index}}"></img>
-			<label id="error_content{{ form.index }}" ></label>
+			<span id="error_content{{ form.index }}" ></span>
 		</div>
 		<div style="clear:left; padding-top:3px;">
 			<div style="float:left;padding-right: 5px;">
-				<label for="id_content">Note:</label><input id="id_content" type="text" name="content" maxlength="500" size="20">
+				<label for="id_content{{form.index}}">Note:</label><input id="id_content{{form.index}}" type="text" name="content" maxlength="500" size="20">
 			</div>
 			<div style="float:left; ">
 	        	<label for="id_tags{{form.index}}">Tags:</label>
