--- a/xgds_video/templates/xgds_video/LiveImageStream.html
+++ b/xgds_video/templates/xgds_video/LiveImageStream.html
@@ -3,12 +3,12 @@
 {% block headExtras %}
 {{block.super}}
 	<script src="{{ STATIC_URL }}geocamUtil/js/zmq.js" type="text/javascript"></script>
-	<script src="{{ STATIC_URL }}external/js/jquery/jquery.js" type="text/javascript"></script>
- 	<script src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" type="text/javascript"></script>
-  	<script src="{{STATIC_URL}}external/js/jquery/jquery-ui.js" type="text/javascript" ></script>
- 	<script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
- 	<script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
-  	<script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
+	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js" type="text/javascript"></script>
+ 	<script src="{{ EXTERNAL_URL }}masonry/dist/masonry.pkgd.min.js" type="text/javascript"></script>
+ 	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
+ 	<script src="{{ EXTERNAL_URL }}jquery.tagsinput/jquery.tagsinput.min.js" type="text/javascript" ></script>
+ 	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
+  	<script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   	<script type="text/javascript">
     	var STATIC_URL = '{{STATIC_URL}}';
         var submitNoteUrl = '{% url record_simple %}';
@@ -21,9 +21,9 @@
 
 {% block cssExtras %}
  {{ block.super }}
-	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery.tagsinput.css"></link>
-	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery-ui.css"></link>
-	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}xgds_video/css/xgds_video.css"></link>
+	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-tagsinput/jquery.tagsinput.css"></link>
+	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
+	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
 {% endblock cssExtras %}
 
 {% load nav %}
