--- a/xgds_video/templates/xgds_video/SearchImageStreams.html
+++ b/xgds_video/templates/xgds_video/SearchImageStreams.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block headExtras %}
 {{ block.super }}
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.js"></script>
- 	<script type="text/javascript" src="{{ STATIC_URL }}external/js/date.js"></script>
+    <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
+ 	<script type="text/javascript" src="{{ EXTERNAL_URL }}date.js/index.js"></script>
 {% endblock headExtras %}
 
 {% block cssExtras %}
@@ -17,7 +17,7 @@
 
 {% block nav %}
    {{ block.super }}
-   <link rel="stylesheet" href="{{ STATIC_URL }}external/css/jquery/jquery-ui.css"></link>
+   <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
 {% endblock %}
 
 {% block sitemenu-content-secondary %}
@@ -50,11 +50,11 @@
 
 {% block scripts %}
   {{ block.super }}
-  	<script language="javascript" type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.js"></script>
-	<script language="javascript" type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery.dataTables.js"></script>
+  	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
+  	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}datatables/media/js/jquery.dataTables.min.js"></script>
 	<script language="javascript" type="text/javascript" src="{{ STATIC_URL }}geocamUtil/js/datatable_helpers.js"></script>
 	
- 	<script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
+ 	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
   	<script type="text/javascript">
   	 var image_streams_table;
 
