--- a/xgds_video/templates/xgds_video/test.html
+++ b/xgds_video/templates/xgds_video/test.html
@@ -2,15 +2,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-          <script type="text/javascript" src="{{ STATIC_URL }}external/js/jwplayer/jwplayer.js"></script>
+          <script type="text/javascript" src="{{ EXTERNAL_URL }}jwplayer/jwplayer.js"></script>
          <script type="text/javascript">
                 jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";
 		       var STATIC_URL='{{ STATIC_URL }}';
         </script>
-          <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery.js"></script>
-          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery.tagsinput.css"></link>
-          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery-ui.css"></link>
-          <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.js"></script>
+          <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
+          <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-tagsinput/jquery.tagsinput.css"></link>
+          <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
+          <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
         <title>Multiple 2</title>
     </head>
 
