--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -1,29 +1,29 @@
 {% extends "base.html" %}
 {% block headExtras %}
 {{block.super}}
-<script src="{{ STATIC_URL }}external/js/jquery/jquery.js" type="text/javascript"></script>
- <script src="{{ STATIC_URL }}external/js/AC_QuickTime.js" language="javascript" type="text/javascript"></script>
- <script src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" type="text/javascript"></script>
-  <script src="{{STATIC_URL}}external/js/jquery/jquery-ui.js" type="text/javascript" ></script>
- <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
- <script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
-  <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
+<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js" type="text/javascript"></script>
+ <script src="{{ EXTERNAL_URL }}AC_QuickTime/index.js" language="javascript" type="text/javascript"></script>
+ <script src="{{ EXTERNAL_URL }}masonry/dist/masonry.pkgd.min.js" type="text/javascript"></script>
+ <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
+ <script src="{{ EXTERNAL_URL }}jquery-tagsinput/jquery.tagsinput.js" type="text/javascript" ></script>
+ <script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
+  <script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   <script type="text/javascript">
-    var STATIC_URL = '{{STATIC_URL}}';
+    var STATIC_URL = '{{ STATIC_URL }}';
     var submitNoteUrl = '{% url record_simple %}';
  	var maxWidth = getMaxWidth({{videoFeedData|length}});
  	var isLive = true;
 </script>
 {% if INCLUDE_NOTE_INPUT %}
- <script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
+ <script src="{{ STATIC_URL }}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
  {% endif %}
  {% endblock headExtras %}
  
  {% block cssExtras %}
  {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery.tagsinput.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery-ui.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}xgds_video/css/xgds_video.css"></link>
+<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-tagsinput/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
 {% endblock cssExtras %}
 
 {% block scripts %}
