fixed path for tagsinput

--- a/xgds_video/templates/xgds_video/LiveImageStream.html
+++ b/xgds_video/templates/xgds_video/LiveImageStream.html
@@ -21,7 +21,7 @@
 
 {% block cssExtras %}
  {{ block.super }}
-	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-tagsinput/jquery.tagsinput.css"></link>
+	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/jquery.tagsinput.css"></link>
 	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
 	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
 {% endblock cssExtras %}
