--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -10,7 +10,7 @@
   <script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   <script type="text/javascript">
     var STATIC_URL = '{{ STATIC_URL }}';
-    var submitNoteUrl = '{% url record_simple %}';
+    var submitNoteUrl = "{% url 'record_simple' %}";
  	var maxWidth = getMaxWidth({{videoFeedData|length}});
  	var isLive = true;
 </script>
@@ -59,7 +59,7 @@ If plugin is missing, download <a href="https://support.google.com/chrome/answer
   		  		<option value="actual" selected="selected">Actual</option>	  
 		  		<option value="full">Full</option>
 			</select>
-	     	<a class="mybutton" href="{% url xgds_video_recorded %}?source={{ feed.source.shortName }}">Recorded</a>
+	     	<a class="mybutton" href="{% url 'xgds_video_recorded' %}?source={{ feed.source.shortName }}">Recorded</a>
 	     	</span>
 	     </div>
 	     {% if INCLUDE_NOTE_INPUT %}
