--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -22,13 +22,19 @@
         var submitNoteUrl = "{% url 'record_simple' %}";
         var isLive = false;
     </script>
+    <!-- for jwplayer to work offline, we pull down the js files that it needs via bower -->
+    <!-- TODO remove these lines, not needed with correct version of jwplayer 
+    <script src="{{ EXTERNAL_URL }}jwpsrv/jwpsrv.js" type="text/javascript"></script>
+    <script src="{{ EXTERNAL_URL }}jwpsrv_frq/jwpsrv_frq.js" type="text/javascript"></script>
+-->
+    <!-- end offline jwplayer -->
     <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoUtils.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoPlayer.js"></script>
     <script src="{{ EXTERNAL_URL }}jquery.tagsinput/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
- 	<script type="text/javascript" src="{{ EXTERNAL_URL }}date.js/index.js"></script>
+ 	<script type="text/javascript" src="{{ EXTERNAL_URL }}date/index.js"></script>
  	{% if INCLUDE_NOTE_INPUT %}
  	<script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
  	{% endif %}
