--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -214,7 +214,7 @@ div.ui-slider-range.ui-widget-header {
 }
 
 /* __BEGIN_LICENSE__
-/*Copyright © 2015, United States Government, as represented by the 
+/*Copyright (c) 2015, United States Government, as represented by the 
 /*Administrator of the National Aeronautics and Space Administration. 
 /*All rights reserved.
 /*
