--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -5,7 +5,7 @@
  <script src="{{ EXTERNAL_URL }}AC_QuickTime/index.js" language="javascript" type="text/javascript"></script>
  <script src="{{ EXTERNAL_URL }}masonry/dist/masonry.pkgd.min.js" type="text/javascript"></script>
  <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
- <script src="{{ EXTERNAL_URL }}jquery-tagsinput/jquery.tagsinput.js" type="text/javascript" ></script>
+ <script src="{{ EXTERNAL_URL }}jquery-tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
  <script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
   <script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   <script type="text/javascript">
@@ -21,7 +21,7 @@
  
  {% block cssExtras %}
  {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/dist/jquery.tagsinput.min.css"></link>
 <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"></link>
 {% endblock cssExtras %}
