--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -100,6 +100,7 @@
 	            <div class="buttons">
 	                 <div class="toprow-left">Camera: <b>{{ source.name }}</b></div>
                      <a class="mybutton toprow-right" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="new" style="width:130px">New Window</a>
+                     <a class="mybutton toprow-right" target="new" href="/data/test/sampleImages/frameGrabSample.jpg" style="width:130px">Still</a>
 	                 {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
@@ -144,7 +145,7 @@ var indexFileUrl = null;
 {% if segmentsJson %}
     //globals
     var xgds_video = { masterSlider: '',
-                       playFlag: true,
+                       playFlag: false,
                        seekFlag: false,
                        initialState: false,
                        seekOffsetList: {},
