--- a/xgds_video/templates/xgds_video/video_still_viewer.html
+++ b/xgds_video/templates/xgds_video/video_still_viewer.html
@@ -22,6 +22,7 @@
         var submitNoteUrl = "{% url 'record_simple' %}";
         STATIC_URL='{{ STATIC_URL }}';
         var event_timestring = '{{event_timestring}}';
+        var isLive = true;
     </script>
     <script src="{{ EXTERNAL_URL }}jquery.tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
