--- a/xgds_video/templates/xgds_video/video_subnav.html
+++ b/xgds_video/templates/xgds_video/video_subnav.html
@@ -4,7 +4,7 @@
 <form id="streamForm">
 <div class="sitemenu-nav-secondary">
 	<ul>
-		<li{% currentnav xgds_video_live %}><a href="{% url 'xgds_video_live' 'all' %}">Live</a></li>
+<!--		<li{% currentnav xgds_video_live %}><a href="{% url 'xgds_video_live' 'all' %}">Live</a></li> -->
 		<li {% currentnav xgds_video_recorded %}><a href="{% url 'xgds_video_recorded' %}">Recorded</a></li>
   	</ul>
 </div>
