--- a/xgds_video/templates/xgds_video/VideoJS.html
+++ b/xgds_video/templates/xgds_video/VideoJS.html
@@ -15,6 +15,7 @@
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoUtils.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoPlayer.js"></script>
+ 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/packem.js"></script>
     <script src="{{ EXTERNAL_URL }}jquery.tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ EXTERNAL_URL }}date/index.js"></script>
