aspect ratio for resizing

--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -11,7 +11,7 @@
 		</div>
 		<div style="clear:left; padding-top:3px;">
 			<div style="float:left;padding-right: 5px;">
-				<label for="id_content{{form.index}}">Note:</label><input id="id_content{{form.index}}" type="text" name="content" maxlength="500" size="20">
+				<label for="id_content{{form.index}}">Note:</label><input class="noteinput" id="id_content{{form.index}}" type="text" name="content" maxlength="500" size="20">
 			</div>
 			<div style="float:left; ">
 	        	<label for="id_tags{{form.index}}">Tags:</label>
