--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -186,5 +186,7 @@ var indexFileUrl = null;
     
     setupJWplayer({"mute":true}, hasMasterSlider, false, "100%");
 {% endif %}
+	
+	//setupNotesUI();
 	initializePackery();
  {% endblock jsInit %}
