--- a/xgds_video/templates/xgds_video/video_active_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_active_playbacks.html
@@ -20,6 +20,17 @@
 
     {% if segmentsJson %}
     	<div id="topStuff">
+    			<div id="controllers" > 
+    			<br/>
+    			<div class="controller_div">
+	          	<a class="btn btn-info" id="playbuttonLink" href="#" onclick="playButtonCallback()">
+	              <i id="playbutton" class="icon-play active"></i>
+	              </a>
+	            <a class="btn btn-info" id="pausebuttonLink" href="#" onclick="pauseButtonCallback()">
+	              <i id="pausebutton" class="icon-pause"></i>
+	              </a>
+	             </div>
+	          </div>
 	    	<div id="infoTable">
 	    	<table>
 	    		{% if episode %}
@@ -33,24 +44,16 @@
    		</div>
 
  		<fieldset id="videoFieldset">
-	          <div > 
-	          	<a class="btn btn-small btn-info" href="#" onclick="playButtonCallback()">
-	              <i id="playbutton" class="icon-play active"></i>
-	              </a>
-	            <a class="btn btn-small btn-info" href="#" onclick="pauseButtonCallback()">
-	              <i id="pausebutton" class="icon-pause"></i>
-	              </a>
-	          </div>
-  		  	  <div id="legend"></div>
+		 	  <div id="masterSlider" class="masterSlider"></div>
  		</fieldset>
 
-        <div id="container" class="js-masonry" data-masonry-options='{"itemSelector": ".item", "gutter":5, "isInitLayout":false}'>
+        <div id="container" >
         {% for source in sources %}
-			<div class="item" id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
+        	<div class={% if sources|length > 1 %}"item w2"{% else %}"item"{% endif %} id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
 	            <div class="buttons">
 	                 <div class="toprow-left">Camera: <b>{{ source.name }}</b></div>
                      <a class="mybutton toprow-right" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="_blank" style="width:130px">New Window</a>
-                     <a class="mybutton toprow-right" href="#" style="width:130px" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">TODO Still</a>
+                     <!--  <a class="mybutton toprow-right" href="#" style="width:130px" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">TODO Still</a> -->
 	                 {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
@@ -58,14 +61,16 @@
 	                 {% endwith %}
 	            </div>
 	            {% if INCLUDE_NOTE_INPUT %}
+	            <!--  
 				<section>
              		{% include "xgds_video/video_notes.html" with data=source.form source=source.shortName STATIC_URL=STATIC_URL %}
              	</section>
+             	-->
              	{% endif %}
              	<!--embed the video-->
              	<section>
-              		<div id="player_container" class="float-left">
-             			<div id="{{ source.shortName }}"></div>
+              		<div id="player_container" class="row">
+             			<div id="{{ source.shortName }}" class="eleven columns"></div>
              		</div> <!--  player-container -->
              		<div id="{{ source.shortName }}Label" style="float:left;text-align:left;font-family:arial,verdana,helvetica"> </div>
              	</section>
@@ -76,7 +81,7 @@
              	</section>
             </div><!--  item -->
         {% endfor %}
-        </div> <!--  js masonry container -->
+        </div> <!--  js packery container -->
 
     {% endif %}
 {% endblock contents %}
@@ -154,15 +159,11 @@ var indexFileUrl = null;
 
     //set up the player
     var jwplayerOptions = {
-//            autostart: true,
-//        	width: "100%",
-//        	aspectratio: "16:9",
-//             width: maxWidth,
-//            height: videoHeight,
             mute: true
             };
-    setupJWplayer(jwplayerOptions, hasMasterSlider, true);
+    setupJWplayer({"mute":true}, hasMasterSlider, false, "100%");
+    
 {% endif %}
- 	//update masonry sizing
- 	$('#container').masonry().masonry();
+ 	//setupNotesUI();
+	initializePackery();
 {% endblock jsInit %}
