--- a/xgds_video/templates/xgds_video/video_active_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_active_playbacks.html
@@ -53,7 +53,7 @@
         	<div class={% if sources|length > 1 %}"item w2"{% else %}"item"{% endif %} id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
 	            <div class="buttons">
 	                 <div class="toprow-left">Camera: <b>{{ source.name }}</b></div>
-                     <a class="mybutton toprow-right" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="_blank" style="width:130px">New Window</a>
+                     <a class="mybutton toprow-right small" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="_blank" style="width:130px">New Window</a>
                      <!--  <a class="mybutton toprow-right" href="#" style="width:130px" onClick="showStillViewer('{{flightName}}', '{{source.shortName}}', getUrlFormatPlayerTime('{{source.shortName}}'));">TODO Still</a> -->
 	                 {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
@@ -163,6 +163,6 @@ var indexFileUrl = null;
     setupJWplayer({"mute":true}, hasMasterSlider, false, "100%");
     
 {% endif %}
- 	//setupNotesUI();
+ 	setupNotesUI();
 	initializePackery();
 {% endblock jsInit %}
